# vixal

./: .gitmodules  README.md
core/: CMakeLists.txt
core/cmake/: CPackConfig.cmake  VIXALConfig.cmake
core/include/: CMakeLists.txt  CoreVersion.h  CoreVersion.h.in  catch.hpp
core/include/application/: Application.h  CommandHandler.h  Config.h  ExternalQueue.h  Maintainer.h  PersistentState.h
core/include/bucket/: Bucket.h  BucketApplicator.h  BucketInputIterator.h  BucketList.h  BucketManager.h  BucketOutputIterator.h  FutureBucket.h  LedgerCmp.h  PublishQueueBuckets.h
core/include/catchup/: ApplyBucketsWork.h  ApplyLedgerChainWork.h  CatchupConfiguration.h  CatchupManager.h  CatchupWork.h  DownloadBucketsWork.h  VerifyLedgerChainWork.h
core/include/crypto/: ByteSlice.h  ECDH.h  HashOfHash.h  Hex.h  KeyUtils.h  Random.h  SHA.h  SecretKey.h  SignerKey.h  StrKey.h
core/include/database/: Database.h  DatabaseUtils.h
core/include/herder/: Herder.h  HerderPersistence.h  HerderSCPDriver.h  HerderUtils.h  LedgerCloseData.h  TxSetFrame.h  Upgrades.h
core/include/history/: FileTransferInfo.h  HistoryArchive.h  HistoryArchiveManager.h  HistoryManager.h  HistoryTestsUtils.h  InferredQuorum.h  StateSnapshot.h
core/include/historywork/: BatchDownloadWork.h  BucketDownloadWork.h  FetchRecentQsetsWork.h  GetAndUnzipRemoteFileWork.h  GetHistoryArchiveStateWork.h  GetRemoteFileWork.h  GunzipFileWork.h  GzipFileWork.h  MakeRemoteDirWork.h  Progress.h  PublishWork.h  PutHistoryArchiveStateWork.h  PutRemoteFileWork.h  PutSnapshotFilesWork.h  RepairMissingBucketsWork.h  ResolveSnapshotWork.h  RunCommandWork.h  VerifyBucketWork.h  WriteSnapshotWork.h
core/include/http/: HttpClient.h  connection.hpp  connection_manager.hpp  header.hpp  reply.hpp  request.hpp  request_handler.h  request_parser.hpp  server.hpp
core/include/invariant/: AccountSubEntriesCountIsValid.h  BucketListIsConsistentWithDatabase.h  CacheIsConsistentWithDatabase.h  ConservationOfLumens.h  Invariant.h  InvariantDoesNotHold.h  InvariantManager.h  InvariantTestUtils.h  LedgerEntryIsValid.h  LiabilitiesMatchOffers.h  MinimumAccountBalance.h
core/include/ledger/: AccountFrame.h  CheckpointRange.h  DataFrame.h  EntryFrame.h  LedgerDelta.h  LedgerHeaderFrame.h  LedgerManager.h  LedgerRange.h  LedgerTestUtils.h  OfferFrame.h  SyncingLedgerChain.h  TrustFrame.h
core/include/medida/: counter.h  histogram.h  meter.h  metered_interface.h  metric_interface.h  metric_processor.h  metrics_registry.h  sampling_interface.h  summarizable_interface.h  timer.h  timer_context.h  types.h
core/include/overlay/: BanManager.h  Floodgate.h  ItemFetcher.h  LoadManager.h  LoopbackPeer.h  OverlayManager.h  Peer.h  PeerAuth.h  PeerBareAddress.h  PeerDoor.h  PeerRecord.h  PeerSharedKeyId.h  TCPPeer.h  Tracker.h
core/include/process/: PosixSpawnFileActions.h  ProcessManager.h
core/include/scp/: BallotProtocol.h  LocalNode.h  NominationProtocol.h  QuorumSetUtils.h  SCP.h  SCPDriver.h  Slot.h
core/include/simulation/: LoadGenerator.h  Simulation.h  Topologies.h
core/include/test/: TestAccount.h  TestExceptions.h  TestMarket.h  TestPrinter.h  TestUtils.h  TxTests.h  test.h
core/include/transactions/: AllowTrustOpFrame.h  BumpSequenceOpFrame.h  ChangeTrustOpFrame.h  CreateAccountOpFrame.h  CreatePassiveOfferOpFrame.h  InflationOpFrame.h  ManageDataOpFrame.h  ManageOfferOpFrame.h  MergeOpFrame.h  OfferExchange.h  OperationFrame.h  PathPaymentOpFrame.h  PaymentOpFrame.h  SetOptionsOpFrame.h  SignatureChecker.h  SignatureUtils.h  SignerKeyUtils.h  TransactionFrame.h
core/include/util/: Algoritm.h  BitsetEnumerator.h  Fs.h  GlobalChecks.h  Logging.h  Math.h  MetricResetter.h  NtpClient.h  SecretValue.h  SimpleTestReporter.hpp  SociNoWarnings.h  StatusManager.h  Timer.h  TmpDir.h  XDROperators.h  XDRStream.h  abstract_clock.hpp  basen.h  cpptoml.h  manual_clock.hpp  noncopyable.h  optional.h  optional.hpp  random.hpp  tasks_processor_base.hpp  types.h
core/include/work/: AbstractWork.h  NtpWork.h  Work.h  WorkManager.h
core/include/xdr/: CMakeLists.txt  ledger-entries.h  ledger-entries.x  ledger.h  ledger.x  overlay.h  overlay.x  scp.h  transaction.h  transaction.x  types.h  types.x  xdr.h
core/src/: CMakeLists.txt
core/src/application/: Application.cpp  ApplicationImpl.cpp  ApplicationImpl.h  CMakeLists.txt  CommandHandler.cpp  Config.cpp  CoreVersion.cpp.in  ExternalQueue.cpp  Maintainer.cpp  NtpSynchronizationChecker.cpp  NtpSynchronizationChecker.h  PersistentState.cpp
core/src/bucket/: Bucket.cpp  BucketApplicator.cpp  BucketInputIterator.cpp  BucketList.cpp  BucketManagerImpl.cpp  BucketManagerImpl.h  BucketOutputIterator.cpp  CMakeLists.txt  FutureBucket.cpp  PublishQueueBuckets.cpp  readme.md
core/src/catchup/: ApplyBucketsWork.cpp  ApplyLedgerChainWork.cpp  CMakeLists.txt  CatchupConfiguration.cpp  CatchupManagerImpl.cpp  CatchupManagerImpl.h  CatchupWork.cpp  DownloadBucketsWork.cpp  VerifyLedgerChainWork.cpp
core/src/crypto/: CMakeLists.txt  ECDH.cpp  HashOfHash.cpp  Hex.cpp  KeyUtils.cpp  Random.cpp  SHA.cpp  SecretKey.cpp  SignerKey.cpp  StrKey.cpp  crc16.cpp  readme.md
core/src/database/: CMakeLists.txt  Database.cpp  DatabaseConnectionString.cpp  DatabaseConnectionString.h  DatabaseUtils.cpp  readme.md
core/src/herder/: CMakeLists.txt  Herder.cpp  HerderImpl.cpp  HerderImpl.h  HerderPersistenceImpl.cpp  HerderPersistenceImpl.h  HerderSCPDriver.cpp  HerderUtils.cpp  LedgerCloseData.cpp  PendingEnvelopes.cpp  PendingEnvelopes.h  TxSetFrame.cpp  Upgrades.cpp
core/src/history/: CMakeLists.txt  FileTransferInfo.cpp  HistoryArchive.cpp  HistoryArchiveManager.cpp  HistoryManagerImpl.cpp  HistoryManagerImpl.h  HistoryTestsUtils.cpp  InferredQuorum.cpp  StateSnapshot.cpp  readme.md
core/test/: CMakeLists.txt  test_main.cpp
soci/tests/: CMakeLists.txt
xdrpp/: CMakeLists.txt  Makefile.am  configure.ac
xdrpp/cmake/: CPackConfig.cmake  XDRPPConfig.cmake  XdrppCompile.cmake  XdrppDependencies.cmake  XdrppUtilities.cmake  XdrppVersion.cmake
xdrpp/src/: CMakeLists.txt
xdrpp/tests/: validate.cc
(+308 files in other folders)
