
add_subdirectory(medida)

add_subdirectory(http)

add_subdirectory(crypto)

add_subdirectory(json)

add_subdirectory(util)

add_subdirectory(bucket)

add_subdirectory(ledger)

add_subdirectory(overlay)

add_subdirectory(scp)

add_subdirectory(database)

add_subdirectory(transactions)

add_subdirectory(invariant)

add_subdirectory(history)

add_subdirectory(work)

add_subdirectory(historywork)

add_subdirectory(herder)

add_subdirectory(catchup)

add_subdirectory(process)

add_subdirectory(sqlite)

add_subdirectory(simulation)

add_subdirectory(application)

add_subdirectory(test)

add_subdirectory(main)

